Fix spacing issue on footer

--- a/src/assets/scss/pages/_homepage.scss
+++ b/src/assets/scss/pages/_homepage.scss
@@ -153,7 +153,6 @@
 	background-size: cover;
 	padding-top: 1rem;
 	padding-bottom: 6rem;
-	margin-bottom: -2rem;
 
 	@media #{$medium-up} {
 		height: 530px;
